koreabank bar grap in ramfore

--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
         integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc=" 
         crossorigin="anonymous"></script>
 <!-- <script>
-        $.ajax({
-            url: "test.html",
-            context: document.body
-        }).done(function () {
+        $.ajax(
+            {url: "test.html",
+             context: document.body
+            }
+        ).done(function () {
             $(this).addClass("done");
-        });
+            }
+        );
     </script> -->
     <img id="cloaking" src="./images/cloaking.png" alt="cloaking">
     <img id="wraith" src="./images/wraith.png" alt="wraith">
