janggum CSS study

--- a/CalculatorJanggun2.htm
+++ b/CalculatorJanggun2.htm
@@ -47,6 +47,7 @@
     </style>
 </head>
 <body>
+    <div class="bg"></div>
     <div class="main">
         <form name="form">
             <input class="textview" name="textview">
