study in jangkum

--- a/CalculatorJanggun3.htm
+++ b/CalculatorJanggun3.htm
@@ -43,6 +43,8 @@
         top: 50%;
         left: 50%;
         transform: translateX(-50%) translateY(-50%);
+        /* background: linear-gradient(to right, red, blue);
+        height: 100%; */
     }
     .bg{
         background: linear-gradient(to right, red, blue);
@@ -50,8 +52,8 @@
     }
     </style>
 </head>
-<body>
-    <div class="bg">
+<body >
+    <div class="bg"></div>
     <div class="main">
         <form name="form">
             <input class="textview" name="textview">
@@ -87,7 +89,7 @@
             </tr>
         </table>
     </div>
-</div>
+    <!-- </div> -->
     
 </body>
 </html>
