--- a/CalculatorJanggun3.htm
+++ b/CalculatorJanggun3.htm
@@ -31,6 +31,9 @@
         height: 50px;
         font-size: 25px;
         cursor: pointer;
+        background: darkolivegreen;
+        border: darkorchid;
+        color :white;
     }
     .textview{
         width: 190px;
@@ -43,54 +46,55 @@
         top: 50%;
         left: 50%;
         transform: translateX(-50%) translateY(-50%);
-        /* background: linear-gradient(to right, red, blue);
-        height: 100%; */
     }
     .bg{
-        background: linear-gradient(to right, red, blue);
-        height: 100%;
+        width:1200px;
+        height:1200px;
+        background: linear-gradient(to right, rgba(255, 0, 0, 0.794), rgba(0, 0, 255, 0.794) );
+   
     }
     </style>
 </head>
-<body >
-    <div class="bg"></div>
-    <div class="main">
-        <form name="form">
-            <input class="textview" name="textview">
-        </form>
-        <table>
-            <tr>
-                <td><input class="button" type="button" value="C" onclick="clean()"></td>
-                <td><input class="button" type="button" value="<" onclick="back()"></td>
-                <td><input class="button" type="button" value="/" onclick="insert('/')"></td>
-                <td><input class="button" type="button" value="X" onclick="insert('*')"></td>
-            </tr>
-            <tr>
-                <td><input class="button" type="button" value="7" onclick="insert(7)"></td>
-                <td><input class="button" type="button" value="8" onclick="insert(8)"></td>
-                <td><input class="button" type="button" value="9" onclick="insert(9)"></td>
-                <td><input class="button" type="button" value="-" onclick="insert('-')"></td>
-            </tr>
-            <tr>
-                <td><input class="button" type="button" value="4" onclick="insert(4)"></td>
-                <td><input class="button" type="button" value="5" onclick="insert(5)"></td>
-                <td><input class="button" type="button" value="6" onclick="insert(6)"></td>
-                <td><input class="button" type="button" value="+" onclick="insert('+')"></td>
-            </tr>
-            <tr>
-                <td><input class="button" type="button" value="1" onclick="insert(1)"></td>
-                <td><input class="button" type="button" value="2" onclick="insert(2)"></td>
-                <td><input class="button" type="button" value="3" onclick="insert(3)"></td>
-                <td rowspan="2"><input class="button" style="height: 102px;" type="button" value="=" onclick="equal()"></td>
-            </tr>
-            <tr>
-                <td colspan=2><input class="button" style="width:102px" type="button" value="0" onclick="insert(0)"></td>
-                <td><input class="button" type="button" value="." onclick="insert('.')"></td>
-            </tr>
-        </table>
+<body>
+    <div class="bg">
+        <div class="main">
+            <form name="form">
+                <input class="textview" name="textview">
+            </form>
+            <table>
+                <tr>
+                    <td><input class="button" type="button" value="C" onclick="clean()"></td>
+                    <td><input class="button" type="button" value="<" onclick="back()"></td>
+                    <td><input class="button" type="button" value="/" onclick="insert('/')"></td>
+                    <td><input class="button" type="button" value="X" onclick="insert('*')"></td>
+                </tr>
+                <tr>
+                    <td><input class="button" type="button" value="7" onclick="insert(7)"></td>
+                    <td><input class="button" type="button" value="8" onclick="insert(8)"></td>
+                    <td><input class="button" type="button" value="9" onclick="insert(9)"></td>
+                    <td><input class="button" type="button" value="-" onclick="insert('-')"></td>
+                </tr>
+                <tr>
+                    <td><input class="button" type="button" value="4" onclick="insert(4)"></td>
+                    <td><input class="button" type="button" value="5" onclick="insert(5)"></td>
+                    <td><input class="button" type="button" value="6" onclick="insert(6)"></td>
+                    <td><input class="button" type="button" value="+" onclick="insert('+')"></td>
+                </tr>
+                <tr>
+                    <td><input class="button" type="button" value="1" onclick="insert(1)"></td>
+                    <td><input class="button" type="button" value="2" onclick="insert(2)"></td>
+                    <td><input class="button" type="button" value="3" onclick="insert(3)"></td>
+                    <td rowspan="2"><input class="button" style="height: 102px;" type="button" value="=" onclick="equal()">
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan=2><input class="button" style="width:102px" type="button" value="0" onclick="insert(0)">
+                    </td>
+                    <td><input class="button" type="button" value="." onclick="insert('.')"></td>
+                </tr>
+            </table>
+        </div>
     </div>
-    <!-- </div> -->
-=======
     
 </body>
 </html>
