study of JavaScript by 엘리

--- a/basicHtml.html
+++ b/basicHtml.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>THC HTML/CSS Study</title>
-    //참고 사이트 >> https://www.youtube.com/watch?v=s1vpVCrT8f4
+    <!-- //참고 사이트 >> https://www.youtube.com/watch?v=s1vpVCrT8f4 -->
     <style type="text/css">
         div {
             border: 1px solid blue;
@@ -46,12 +46,23 @@
     <div>div(division) tag 기본</div>
     <div>div(division) tag 기본</div>
     <div>div(division) tag 기본</div>
+
     <p>p(paragrap) tag 기본</p>
     <p>p(paragrap) tag 기본</p>
     <p>p(paragrap) tag 기본</p>
+
     <span>span(span) tag 기본</span>
     <span>span(span) tag 기본</span>
+   
     <span>span(span) tag 기본</span>
+
+    <div>
+        <p>
+            div tag >> p tag >> <span>span tag </span>순서
+        </p>
+    </div>
+
+
 </body>
 
 </html>
