study of JavaScript in dreamCoding by ellie

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <script src="hello.js"></script>
     <script src="variable.js"></script>
+    <script src="operator.js"></script>
 </head>
 <body>
     
