--- a/javascript/index.html
+++ b/javascript/index.html
@@ -7,6 +7,8 @@
     <script src="hello.js"></script>
     <script src="variable.js"></script>
     <script src="operator.js"></script>
+    <script src="function.js"></script>
+    
 </head>
 <body>
     
