--- a/javascript/index.html
+++ b/javascript/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="hello.js"></script>
-    <script src="variable.js"></script>
+    <!-- <script src="variable.js"></script>
     <script src="operator.js"></script>
-    <script src="function.js"></script>
+    <script src="function.js"></script> -->
+    <script src="class.js"></script>
     
 </head>
 <body>
