--- a/javascript/index.html
+++ b/javascript/index.html
@@ -7,8 +7,11 @@
     <script src="hello.js"></script>
     <!-- <script src="variable.js"></script>
     <script src="operator.js"></script>
-    <script src="function.js"></script> -->
+    <script src="function.js"></script> 
     <script src="class.js"></script>
+    <script src="object.js"></script>
+    <script src="array.js"></script> -->
+    <script src="json.js"></script>
     
 </head>
 <body>
