--- a/javascript/index.html
+++ b/javascript/index.html
@@ -10,8 +10,11 @@
     <script src="function.js"></script> 
     <script src="class.js"></script>
     <script src="object.js"></script>
-    <script src="array.js"></script> -->
-    <script src="json.js"></script>
+    <script src="array.js"></script>  
+    <script src="json.js"></script> 
+    <script src="async/callback.js"></script> 
+    <script src="async/promise.js">-->
+    </script><script src="array-api.js"></script> 
     
 </head>
 <body>
