--- a/javascript/index.html
+++ b/javascript/index.html
@@ -12,9 +12,10 @@
     <script src="object.js"></script>
     <script src="array.js"></script>  
     <script src="json.js"></script> 
-    <script src="async/callback.js"></script> 
-    <script src="async/promise.js">-->
-    </script><script src="array-api.js"></script> 
+    <script src="async/callback.js"></script>
+    <script src="async/promise.js"</script>
+    <script src="array-api.js"></script>>--> 
+    <script src="async/promise.js"></script> 
     
 </head>
 <body>
