--- a/javascript/index.html
+++ b/javascript/index.html
@@ -13,11 +13,11 @@
     <script src="array.js"></script>  
     <script src="json.js"></script> 
     <script src="async/callback.js"></script>
-    
-    <script src="async/promise.js"</script>
-    <script src="array-api.js"></script>>  
-    <script src="async/promise.js"></script>-->
     <script src="async/callbackexam.js"></script>
+    <script src="async/promise.js"</script>
+    <script src="array-api.js"></script>>  -->
+    <script src="async/promise.js"></script>
+    
 
 </head>
 <body>
