--- a/javascript/index.html
+++ b/javascript/index.html
@@ -15,9 +15,10 @@
     <script src="async/callback.js"></script>
     <script src="async/callbackexam.js"></script>
     <script src="async/promise.js"</script>
-    <script src="array-api.js"></script>>  -->
+    <script src="array-api.js"></script>>  
     <script src="async/promise.js"></script>
-    
+    <script src="async/callback-to-promise.js"></script>-->
+    <script src="async/async.js"></script>>  
 
 </head>
 <body>
