--- a/javascript/index.html
+++ b/javascript/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>티에이치씨정보처리컴퓨터학원</title>
+    <h1>THC정보처리컴퓨터학원 Web강좌</h1>
+    <h2>HTML 기초</h2>
+    <button>전송확인</button>
     <script src="hello.js"></script>
     <!-- <script src="variable.js"></script>
     <script src="operator.js"></script>
