CSS study in ramfore

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>티에이치씨정보처리컴퓨터학원</title>
-    <h1>THC정보처리컴퓨터학원 Web강좌</h1>
-    <h2>HTML 기초</h2>
-    <button>전송확인</button>
-    <script src="hello.js"></script>
-    <!-- <script src="variable.js"></script>
+     <!-- <script src="variable.js"></script>
     <script src="operator.js"></script>
     <script src="function.js"></script> 
     <script src="class.js"></script>
@@ -20,11 +16,63 @@
     <script src="async/promise.js"</script>
     <script src="array-api.js"></script>>  
     <script src="async/promise.js"></script>
-    <script src="async/callback-to-promise.js"></script>-->
-    <script src="async/async.js"></script>>  
+    <script src="async/callback-to-promise.js"></script>
+    <script src="async/async.js"></script>>  -->
 
 </head>
 <body>
-    
+    <link rel="stylesheet" href="basicStyle.css">
+    <!-- <h1>THC정보처리컴퓨터학원 Web강좌</h1>
+    <h2>HTML 기초</h2>
+    <button>전송확인</button>
+    <script src="hello.js"></script>    
+    <header></header>
+    <footer></footer>
+    <section></section>
+    <div></div>
+    <span></span>
+    <h1></h1>
+    <button></button>
+    <a href="http://google.com" target="_blank">Click</a>
+    <p>This is a sentence. <b>That</b> is..</p>
+    <p>This is a sentence. <span>That</span> is..</p>
+    <p>This is a sentence. <div>That</div> is..</p>
+    ol, ul, li 
+    <ol type="i" reversed>
+        <li>love</li>
+        <li>like</li>
+        <li>song</li>
+    </ol>
+    <ul>
+        <li>book</li>
+        <li>note</li>
+        <li>pencil</li>
+    </ul>-->
+    <!-- Input -->
+    <!-- <label for="">Name: </label>
+    <input id="input-name" type="text"> --> -->
+    <ol>
+        <li id="special">First</li>
+        <li>Second</li>
+    </ol>
+    <h1 id="special">Hello</h1>
+    <button>Button 1</button>
+    <button>Button 2</button>
+    <div class="red">사랑해</div>
+    <div class="blue">좋아해</div>
+    <a href="naver.com">Naver</a>
+    <a href="googl.com">Goole</a>
+    <a>Empty</a>
+
+    <!-- block level -->
+    <div></div>
+    <div></div>
+    <div></div>
+
+    <!-- inline level -->
+    <span>1</span>
+    <span>2</span>
+    <span>3</span>
+
 </body>
 </html>
