--- a/javascript/disPos.html
+++ b/javascript/disPos.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>THC disPos</title>
-    <link rel="stylesheet" href="disPos.css">
-</head>
-<body>
+    <link rel="stylesheet" href="disPos.css" />
+  </head>
+  <body>
     <article class="containner">
-        <div></div>
-        <div class="box">I'm Box</div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-
+      <div></div>
+      <div class="box">I'm Box</div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
     </article>
-</body>
+  </body>
 </html>
