--- a/javascript/flexBox.html
+++ b/javascript/flexBox.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>THC disPos</title>
+    <title>THC flexBox</title>
     <link rel="stylesheet" href="flexBox.css">
 </head>
 <body>
