--- a/javascript/flexBox.html
+++ b/javascript/flexBox.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>THC flexBox</title>
-    <link rel="stylesheet" href="flexBox.css">
-</head>
-<body>
+    <link rel="stylesheet" href="flexBox.css" />
+  </head>
+  <body>
     <!-- 코드 자동증가 반복 생성 -->
     <!-- div.container>div.item.item${$}*10 >> tab keyin -->
 
-
     <div class="container">
-        <div class="item item1">1</div>
-        <div class="item item2">2</div>
-        <div class="item item3">3</div>
-      <!--   <div class="item item4">4</div>
-        <div class="item item5">5</div>
-        <div class="item item6">6</div>
-        <div class="item item7">7</div>
-        <div class="item item8">8</div>
+      <div class="item item1">1</div>
+      <div class="item item2">2</div>
+      <div class="item item3">3</div>
+      <div class="item item4">4</div>
+      <div class="item item5">5</div>
+      <div class="item item6">6</div>
+      <div class="item item7">7</div>
+      <!--     <div class="item item8">8</div>
         <div class="item item9">9</div>
         <div class="item item10">10</div>
         <div class="item item1">1</div>
@@ -43,5 +42,5 @@
         <div class="item item9">9</div>
         <div class="item item10">10</div> -->
     </div>
-</body>
+  </body>
 </html>
