restudy object of javaScript in ramfore

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>티에이치씨정보처리컴퓨터학원</title>
-     <!-- <script src="variable.js"></script>
+    <!-- <script src="variable.js"></script>
     <script src="operator.js"></script>
     <script src="function.js"></script> 
-    <script src="class.js"></script>
+    <script src="class.js"></script>-->
     <script src="object.js"></script>
-    <script src="array.js"></script>  
+    <!--<script src="array.js"></script>  
     <script src="json.js"></script> 
     <script src="async/callback.js"></script>
     <script src="async/callbackexam.js"></script>
@@ -18,10 +18,9 @@
     <script src="async/promise.js"></script>
     <script src="async/callback-to-promise.js"></script>
     <script src="async/async.js"></script>>  -->
-
-</head>
-<body>
-    <link rel="stylesheet" href="basicStyle.css">
+  </head>
+  <body>
+    <link rel="stylesheet" href="basicStyle.css" />
     <!-- <h1>THC정보처리컴퓨터학원 Web강좌</h1>
     <h2>HTML 기초</h2>
     <button>전송확인</button>
@@ -50,10 +49,11 @@
     </ul>-->
     <!-- Input -->
     <!-- <label for="">Name: </label>
-    <input id="input-name" type="text"> --> -->
+    <input id="input-name" type="text"> -->
+    -->
     <ol>
-        <li id="special">First</li>
-        <li>Second</li>
+      <li id="special">First</li>
+      <li>Second</li>
     </ol>
     <h1 id="special">Hello</h1>
     <button>Button 1</button>
@@ -73,6 +73,5 @@
     <span>1</span>
     <span>2</span>
     <span>3</span>
-
-</body>
+  </body>
 </html>
