study jons of javaScaript in jangkum

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -7,11 +7,11 @@
     <!-- <script src="variable.js"></script>
     <script src="operator.js"></script>
     <script src="function.js"></script> 
-    <script src="class.js"></script>-->
+    <script src="class.js"></script>
     <script src="object.js"></script>
-    <!--<script src="array.js"></script>  
-    <script src="json.js"></script> 
-    <script src="async/callback.js"></script>
+    <script src="array.js"></script>-->
+    <script src="json.js"></script>
+    <!--<script src="async/callback.js"></script>
     <script src="async/callbackexam.js"></script>
     <script src="async/promise.js"</script>
     <script src="array-api.js"></script>>  
